fix: spacing in the services section

--- a/frontend/src/app/components/menu/menu.component.scss
+++ b/frontend/src/app/components/menu/menu.component.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: auto;
     height: 40px;
-    margin: 0 0 0 70.75px;
+    margin: 0 0 0 60px;
     padding: 0;
     display: flex;
     justify-content: flex-start;
