--- a/frontend/src/app/pages/home/components/projects/projects.component.scss
+++ b/frontend/src/app/pages/home/components/projects/projects.component.scss
@@ -1,5 +1,5 @@
 h1 {
-    margin: 90px 0 60.75px 65px;
+    margin: 90px 0 60.75px 60px;
     height: 92px;
 }
 
