--- a/frontend/src/app/pages/home/components/services/components/service-card/service-card.component.scss
+++ b/frontend/src/app/pages/home/components/services/components/service-card/service-card.component.scss
@@ -1,11 +1,12 @@
 .project-card-container {
     width: 100%;
-    padding: 15px 65px;
+    padding: 0 60px;
+    margin-bottom: 146px;
 }
 
 .custom-gutter {
-    row-gap: 141px;
-    column-gap: 129px;
+    row-gap: 115px;
+    column-gap: 128.75px;
 }
 
 .col {
@@ -21,16 +22,17 @@
     justify-content: flex-start;
     align-items: flex-start;
 
-    &::after {
-        content: "";
-        width: 100%;
-        height: 2px;
-        background-color: #0e0e01;
-    }
+    // &::after {
+    //     content: "";
+    //     width: 100%;
+    //     height: 2px;
+    //     background-color: #0e0e01;
+    // }
 
     .image-wrapper {
         width: auto;
         height: 136px;
+        cursor: pointer;
 
         img {
             width: auto;
@@ -43,15 +45,15 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-top: 40px;
+        margin-top: 60px;
         cursor: pointer;
+        border-bottom: 2px solid #0e0e01;
 
         .title {
             font-family: 'Larsseit-500' !important;
             font-size: 1.5rem;
             color: #0e0e01;
             margin: 0;
-
         }
 
         .bi-chevron-down {
@@ -59,6 +61,7 @@
             font-size: 1.125rem;
             margin-left: 5px;
             padding-top: 5px;
+            margin-right: -1.3px;
             transition: transform 0.2s ease, color 0.2s ease, opacity 0.1s ease;
             opacity: 1;
 
@@ -88,11 +91,11 @@
         }
 
         .description {
-            padding: 20px 0;
+            padding: 50px 0 44.5px 0;
             font-family: 'Sohne' !important;
             font-size: 1.5rem;
             color: #0e0e01;
-            padding-top: 40px;
+            margin: 0;
         }
 
         .more-container {
@@ -101,6 +104,8 @@
             height: auto;
             justify-content: space-between;
             align-items: center;
+            padding-bottom: 10.8px;
+            border-bottom: 2px solid #0e0e01;
 
             .more-wrapper {
                 display: flex;
@@ -117,7 +122,7 @@
 
                 .bi-arrow-right-short {
                     margin-top: 4px;
-                    margin-left: 5px;
+                    margin-left: 2.3px;
                     color: #0e0e01;
                     font-size: 1.5rem;
                     transition: transform 0.3s ease;
@@ -139,6 +144,8 @@
             color: #0e0e01;
             font-size: 1.125rem;
             transition: transform 0.3s ease;
+            margin-top: 3px;
+            margin-right: -1.3px;
             cursor: pointer;
 
             &:hover {
@@ -156,7 +163,7 @@
                 bottom: 5px;
                 left: 50%;
                 transform: translateX(-50%);
-                width: 90%;
+                width: 12.03px;
                 height: 1px;
                 background-color: #0e0e01;
                 border-radius: 10px;
