--- a/frontend/src/app/pages/home/components/services/services.component.scss
+++ b/frontend/src/app/pages/home/components/services/services.component.scss
@@ -1,5 +1,5 @@
 h1 {
-    margin: 90px 0 100px 65px;
+    margin: 90px 0 100px 60px;
     height: 92px;
 }
 
@@ -25,11 +25,11 @@ h1 {
 
     .footer-button {
         display: flex;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
         color: #0e0e01;
-        margin-left: 120px;
-        margin-right: 15px;
+        padding: 0;
+        margin: 0 9px 1.7px 120px;
         border: none;
         background-color: transparent;
         font-family: 'Sohne-500' !important;
@@ -37,9 +37,10 @@ h1 {
 
         i {
             font-size: 2rem;
-            margin-left: 5px;
+            margin-left: 0.5px;
             padding-top: 5px;
             transition: transform 0.3s ease;
+            position: relative;
         }
 
         &:hover {
